# ferrumfix-fork

./: .gitignore  .gitmodules  .gitpod.yml  BACKERS.yml  Cargo.toml  FUNDING.yml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  rust-toolchain.toml  test-suite.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/fefast/: Cargo.toml
crates/fefast/src/: codec.rs  codegen.rs  decimal.rs  dtf.rs  errors.rs  field_operators.rs  lib.rs  template.rs
crates/fefix/: Cargo.toml  build.rs
crates/fefix/benches/: fix_decode.rs
crates/fefix/resources/fast/templates/: example.xml
crates/fefix/resources/repositories/FIXRepository_FIX.5.0SP2_EP254/: EP254.xml  Readme.html
crates/fefix/resources/repositories/FIXRepository_FIX.5.0SP2_EP254/Basic/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
crates/fefix/resources/repositories/FIXRepository_FIX.5.0SP2_EP254/Basic/2016/: FixRepository2016.xsd  dc.xsd  dcterms.xsd
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.0/Base/: Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.1/Base/: Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.2/Base/: Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.3/Base/: Components.xml  Datatypes.xml  Enums.xml  Messages.xml  MsgContents.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIX.4.4/Base/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIX.5.0/Base/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIX.5.0SP1/Base/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIX.5.0SP2/Base/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/FIXT.1.1/Base/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/Unified/: FIX.4.0_en_phrases.xml  FIX.4.1_en_phrases.xml  FIX.4.2_en_phrases.xml  FIX.4.3_en_phrases.xml  FIX.4.4_en_phrases.xml  FIX.5.0SP1_en_phrases.xml  FIX.5.0SP2_en_phrases.xml  FIX.5.0_en_phrases.xml  FIXT.1.1_en_phrases.xml
crates/fefix/resources/repositories/fix_repository_2010_edition_20140507/schema/: Abbreviations.xsd  Categories.xsd  Components.xsd  Datatypes.xsd  Enums.xsd  Fields.xsd  Messages.xsd  MsgContents.xsd  Sections.xsd  extensionpack.xsd  repositorystructures.xsd  repositorytypes.xsd  versions.xsd
crates/fefix/src/: buffer.rs  definitions.rs  field_access.rs  lib.rs  prelude.rs  random_field_access.rs  set_field.rs  utils.rs
crates/fefix/src/fefix_core/: build_rs_mod.rs  codegen.rs  dict.rs  mod.rs
crates/fefix/src/fefix_core/resources/quickfix/: FIX-4.0.xml  FIX-4.1.xml  FIX-4.2.xml  FIX-4.3.xml  FIX-4.4.xml  FIX-5.0-SP1.xml  FIX-5.0.xml
crates/fefix/src/fefix_core/test_data/quickfix_specs/: missing_components.xml  missing_fields.xml  missing_header.xml  missing_messages.xml  missing_trailer.xml  no_content.xml  root_has_no_type_attr.xml  root_has_no_version_attrs.xml  root_is_not_fix.xml
crates/fefix/src/fix_value/: checksum.rs  date.rs  mod.rs  monthyear.rs  multiple_chars.rs  multiple_strings.rs  primitives.rs  tagu16.rs  time.rs  timestamp.rs  tz.rs  tz_time.rs  tz_timestamp.rs  utils_chrono.rs  utils_decimal.rs  utils_rust_decimal.rs
crates/fefix/src/json/: config.rs  decoder.rs  encoder.rs  mod.rs
crates/fefix/src/json/test_data/: message_simple.json  message_without_header.json
crates/fefix/src/session/: backends.rs  config.rs  connection.rs  environment.rs  errs.rs  event_loop.rs  heartbeat_rule.rs  mod.rs  resend_request_range.rs  seq_numbers.rs
crates/fefix/src/tagvalue/: config.rs  decoder.rs  encoder.rs  field_locator.rs  mod.rs  raw_decoder.rs  tokio_decoder.rs  utils.rs
crates/fefix_derive/: Cargo.toml
crates/fefix_derive/src/: derive_fix_value.rs  lib.rs
crates/fefixp/: Cargo.toml
crates/fefixp/src/: lib.rs
crates/fefixs/: Cargo.toml
crates/fefixs/src/: iana_to_openssl.rs  lib.rs
crates/fesofh/: Cargo.toml
crates/fesofh/src/: encoding_type.rs  frame.rs  lib.rs  seq_decoder.rs  tokio_codec.rs
docs/logo/: info.txt
docs/release-notes/: v0.7.0.md
examples/00_decode_fix/: Cargo.toml
examples/00_decode_fix/src/: main.rs
examples/03_decode_fix_stream/: Cargo.toml
examples/03_decode_fix_stream/src/: main.rs
examples/05_coinbase_codegen/: .gitignore  Cargo.toml  build.rs
examples/05_coinbase_codegen/src/: coinbase_quickfix.xml  main.rs
examples/10_encode_new_order_single/: Cargo.toml
examples/10_encode_new_order_single/src/: main.rs
examples/20_tokio_fix_initiator/: Cargo.toml  quickfix_executor_config.ini  run_quickfix_executor.sh
examples/20_tokio_fix_initiator/src/: main.rs
examples/30_tcp_sofh/: Cargo.toml
examples/30_tcp_sofh/src/: main.rs
examples/31_tcp_sofh_tokio_codec/: Cargo.toml
examples/70_json_to_tagvalue/: Cargo.toml
examples/70_json_to_tagvalue/src/: main.rs  (+1 more)
examples/tls_fixua_acceptor/: Cargo.toml
tests/codegen_fix44/: Cargo.toml  build.rs
tests/compile_full_features/: Cargo.toml
(+3 files in other folders)
