[package]
name = "fefast"
version = "0.1.0"
authors = ["Filippo Costa @neysofu"]
edition = "2021"
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
publish = true
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
description = "FIX FAST implementation in pure Rust"
license = "MIT OR Apache-2.0"

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "fefast"

[dependencies]
bitvec = "0.18.3"
bytes = { version="1", optional=true }
decimal = { version="2", optional=true }
heck = "0.3"
indoc = "1"
openssl = { version="0.10", optional=true }
# For reading XML.
roxmltree = "0.14"
rust_decimal = { version="1", optional=true }
slog = { version="2", optional=true }
tokio-util = { version="0.6", optional=true, features=["codec"] }

[build-dependencies]
heck = "0.3"
indoc = "1"
quick-xml = "0.22"
roxmltree = "0.14"
rayon = "1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
