[package]
name = "fefast"
version = "0.1.0"
authors = ["Filippo Costa @neysofu"]
edition = "2021"
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
publish = true
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
description = "FIX FAST implementation in pure Rust"
license = "MIT OR Apache-2.0"

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "fefast"

[dependencies]
bitvec = "1.0.0"
bytes = { version = "1.1.0", optional = true }
decimal = { version = "2.1.0", optional = true }
heck = "0.4.0"
indoc = "1.0.6"
openssl = { version = "0.10.40", optional = true }
# For reading XML.
roxmltree = "0.14.1"
rust_decimal = { version = "1.23.1", optional = true }
slog = { version = "2.7.0", optional = true }
tokio-util = { version = "0.7.2", optional = true, features = ["codec"] }

[build-dependencies]
heck = "0.4.0"
indoc = "1.0.6"
quick-xml = "0.22.0"
roxmltree = "0.14.1"
rayon = "1.5.3"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
