[package]
name = "fefix"
version = "0.7.0"
edition = "2021"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
description = "FIX & FAST (FIX Adapted for STreaming) in pure Rust."
publish = true
readme = "../README.md"
keywords = ["fix", "fast", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "fefix"

[[bench]]
name = "fix_decode"
harness = false

[features]
default = ["utils-openssl", "utils-tokio", "utils-chrono"]
codegen = ["heck", "indoc"]
derive = []
json-encoding = []
fix40 = []
fix41 = []
fix42 = []
fix43 = []
fix44 = []
fix50 = []
fix50sp1 = []
fix50sp2 = []
fixt11 = []
# Third-party crate integration.
utils-bytes = ["bytes"]
utils-chrono = []
utils-decimal = ["decimal"]
utils-openssl = ["openssl"]
utils-rust-decimal = ["rust_decimal"]
utils-slog = ["slog"]
utils-tokio = ["tokio-util", "utils-bytes"]

full = [
    "codegen",
    "derive",
    "json-encoding",
    "fix40",
    "fix41",
    "fix42",
    "fix43",
    "fix44",
    "fix50",
    "fix50sp1",
    "fix50sp2",
    "fixt11",
    "serde",
    "serde_json",
    "utils-bytes",
    "utils-chrono",
    "utils-decimal",
    "utils-openssl",
    "utils-rust-decimal",
    "utils-slog",
    "utils-tokio",
]

[dependencies]
bytes = { version = "1.1.0", optional = true }
chrono = "0.4.19"
decimal = { version = "2.1.0", optional = true }
enum-as-inner = "0.5.0"
fefix_derive = { version = "0.7", path = "../fefix_derive" }
fnv = "1.0.7"
futures = "0.3.21"
futures-timer = "3.0.2"
heck = { version = "0.4.0", optional = true }
indoc = { version = "1.0.6", optional = true }
nohash-hasher = "0.2.0"
openssl = { version = "0.10.40", optional = true }
# For reading XML.
roxmltree = "0.14.1"
rust_decimal = { version = "1.23.1", optional = true }
serde = { version = "1.0.137", features = ["derive"], optional = true }
serde_json = { version = "1.0.81", optional = true }
slog = { version = "2.7.0", optional = true }
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1.0.31"
tokio-util = { version = "0.7.2", optional = true, features = ["codec", "compat"] }

[build-dependencies]
chrono = "0.4.19"
fnv = "1.0.7"
heck = "0.4.0"
indoc = "1.0.6"
roxmltree = "0.14.1"
strum = "0.24.0"
strum_macros = "0.24.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.18.2", features = ["full"] }
syn = { version = "1", features = ["parsing"] }

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
