[package]
name = "fefix_derive"
version = "0.7.0"
edition = "2021"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
description = "Code generation for FerrumFIX"
publish = true
keywords = ["fix", "fast", "protocol", "finance", "streaming"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"

[lib]
name = "fefix_derive"
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro-crate = "1.1.3"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["derive", "parsing"] }
