[package]
name = "fesofh"
version = "0.1.0"
authors = ["Filippo Costa @neysofu"]
edition = "2021"
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
description = "SOFH support for Rust."
publish = true
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "fesofh"
[features]
utils-bytes = ["bytes"]
utils-tokio = ["tokio-util", "utils-bytes"]

full = [
    "utils-bytes",
    "utils-tokio",
]

[dependencies]
bytes = { version = "1.1.0", optional = true }
decimal = { version = "2.1.0", optional = true }
heck = { version = "0.4.0", optional = true }
indoc = { version = "1.0.6", optional = true }
openssl = { version = "0.10.40", optional = true }
rust_decimal = { version = "1.23.1", optional = true }
slog = { version = "2.7.0", optional = true }
thiserror = "1.0.31"
tokio-util = { version = "0.7.2", optional = true, features = ["codec"] }

[build-dependencies]
heck = "0.4.0"
indoc = "1.0.6"
quick-xml = "0.22.0"
rayon = "1.5.3"

[dev-dependencies]
quickcheck = "1.0.3"
